--- a/Text-animation-effect/style.css
+++ b/Text-animation-effect/style.css
@@ -21,7 +21,8 @@ body {
 h2 {
   font-size: 3.5em;
   position: relative;
-  z-index: 3;
+  z-index: 1;
+  margin: 200px;
   color: white;
 }
 
@@ -33,8 +34,10 @@ h2:before {
   height: 100%;
   background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(5%, #000), to(#000));
   background: linear-gradient(90deg, transparent 0%, #000 5%, #000 100%);
-  -webkit-animation: animate 5.5s linear infinite;
-          animation: animate 5.5s linear infinite;
+  -webkit-animation: animate 5.5s linear forwards;
+          animation: animate 5.5s linear forwards;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
 }
 
 @-webkit-keyframes animate {
@@ -57,5 +60,18 @@ h2:before {
 
 h2 span {
   color: #ff022c;
+}
+
+video {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  -o-object-fit: cover;
+     object-fit: cover;
+  pointer-events: 2;
+  mix-blend-mode: screen;
 }
 /*# sourceMappingURL=style.css.map */
