--- a/Text-animation-effect/style.scss
+++ b/Text-animation-effect/style.scss
@@ -15,7 +15,8 @@ body {
 h2 {
     font-size: 3.5em;
     position: relative;
-    z-index: 3;
+    z-index: 1;
+    margin: 200px;
     color: white;
     &:before {
         content: '';
@@ -25,7 +26,8 @@ h2 {
         height: 100%;
         background: linear-gradient(90deg, transparent 0%, #000 5%,
         #000 100%);
-        animation: animate 5.5s linear infinite;
+        animation: animate 5.5s linear forwards;
+        animation-delay: 2s;
     }
     @keyframes animate {
         0% {
@@ -38,4 +40,15 @@ h2 {
     span {
         color: #ff022c;
     }
+}
+video {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    object-fit: cover;
+    pointer-events: 2;
+    mix-blend-mode: screen;
 }
