--- a/Video-inside-text/style.css
+++ b/Video-inside-text/style.css
@@ -1,5 +1,37 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+.banner {
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+video {
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+h2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  font-size: 5.5rem;
 }
 /*# sourceMappingURL=style.css.map */
