--- a/Video-inside-text/style.scss
+++ b/Video-inside-text/style.scss
@@ -1,4 +1,31 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+.banner {
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // z-index: 3;
+}
+video {
+    position: absolute;
+    left: 0;
+    right: 0;
+    // width: 100%;
+    // height: 100%;
+    // object-fit: cover;
+}
+h2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    font-size: 5.5rem;
 }
