--- a/Video-inside-text/style.css
+++ b/Video-inside-text/style.css
@@ -32,6 +32,10 @@ h2 {
   width: 100%;
   height: 100%;
   background: #fff;
-  font-size: 5.5rem;
+  color: #000;
+  font-size: 17rem;
+  text-align: center;
+  line-height: 100vh;
+  mix-blend-mode: screen;
 }
 /*# sourceMappingURL=style.css.map */
