--- a/Video-inside-text/style.css
+++ b/Video-inside-text/style.css
@@ -23,6 +23,10 @@ video {
   position: absolute;
   left: 0;
   right: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 h2 {
