--- a/Video-inside-text/style.scss
+++ b/Video-inside-text/style.scss
@@ -16,9 +16,9 @@ video {
     position: absolute;
     left: 0;
     right: 0;
-    // width: 100%;
-    // height: 100%;
-    // object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 h2 {
     position: absolute;
