--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -1,4 +1,16 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
+}
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: black;
+}
+.square {
+    
 }
