--- a/Animated-Box-Design/style.css
+++ b/Animated-Box-Design/style.css
@@ -19,4 +19,28 @@ body {
           align-items: center;
   background: black;
 }
+
+.square {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.square span:nth-child(1) {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid white;
+}
 /*# sourceMappingURL=style.css.map */
