--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -12,5 +12,21 @@ body {
     background: black;
 }
 .square {
-    
+    position: relative;
+    width: 400px;
+    height: 400px;
+    // border: 1px dashed blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    span {
+        &:nth-child(1) {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border: 2px solid white;
+        }
+    }
 }
