--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -27,6 +27,51 @@ body {
             width: 100%;
             height: 100%;
             border: 2px solid white;
+            border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+            transition: 0.5s;
+            animation: animate 6s linear infinite;
+        }
+        &:hover:nth-child(1) {
+            border: none;
+            background: rgba(0,0,255,0.8) ;
+        }
+        &:nth-child(2) {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border: 2px solid white;
+            border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+            transition: 0.5s;
+            animation: animate 4s linear infinite;
+        }
+        &:hover:nth-child(2) {
+            border: none;
+            background: rgba(0,0,255,0.8) ;
+        }
+        &:nth-child(3) {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border: 2px solid white;
+            border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+            transition: 0.5s;
+            animation: animate 10s linear infinite;
+        }
+        &:hover:nth-child(3) {
+            border: none;
+            background: rgba(0,0,255,0.8) ;
+        }
+        @keyframes animate {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
     }
 }
