--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -82,4 +82,13 @@ body {
             }
         }
     }
+    .content {
+        position: relative;
+        padding: 40px 60px;
+        color: #fff;
+        text-align: center;
+        transition: 0.5s;
+        z-index: 1000;
+    }
 }
+
