--- a/Animated-Box-Design/style.css
+++ b/Animated-Box-Design/style.css
@@ -135,4 +135,14 @@ body {
             transform: rotate(0%);
   }
 }
+
+.square .content {
+  position: relative;
+  padding: 40px 60px;
+  color: #fff;
+  text-align: center;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  z-index: 1000;
+}
 /*# sourceMappingURL=style.css.map */
