--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -89,6 +89,20 @@ body {
         text-align: center;
         transition: 0.5s;
         z-index: 1000;
+        a {
+            position: relative;
+            display: inline-block;
+            border: 2px solid white;
+            margin-top: 15px;
+            padding: 5px 10px;
+            text-decoration: none;
+            color: white;
+            font-weight: 600;
+            &:hover {
+                background: white;
+                color: #333;
+            }
+        }
     }
 }
 
