--- a/Animated-Box-Design/style.css
+++ b/Animated-Box-Design/style.css
@@ -49,11 +49,6 @@ body {
           animation: animate 6s linear infinite;
 }
 
-.square span:hover:nth-child(1) {
-  border: none;
-  background: rgba(0, 0, 255, 0.8);
-}
-
 .square span:nth-child(2) {
   position: absolute;
   left: 0;
@@ -68,11 +63,6 @@ body {
           animation: animate 4s linear infinite;
 }
 
-.square span:hover:nth-child(2) {
-  border: none;
-  background: rgba(0, 0, 255, 0.8);
-}
-
 .square span:nth-child(3) {
   position: absolute;
   left: 0;
@@ -85,11 +75,6 @@ body {
   transition: 0.5s;
   -webkit-animation: animate2 10s linear infinite;
           animation: animate2 10s linear infinite;
-}
-
-.square span:hover:nth-child(3) {
-  border: none;
-  background: rgba(0, 0, 255, 0.8);
 }
 
 @-webkit-keyframes animate {
@@ -136,6 +121,21 @@ body {
   }
 }
 
+.square:hover span:nth-child(1) {
+  border: none;
+  background: rgba(0, 0, 255, 0.8);
+}
+
+.square:hover span:nth-child(2) {
+  border: none;
+  background: rgba(0, 0, 255, 0.8);
+}
+
+.square:hover span:nth-child(3) {
+  border: none;
+  background: rgba(0, 0, 255, 0.8);
+}
+
 .square .content {
   position: relative;
   padding: 40px 60px;
@@ -144,6 +144,12 @@ body {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   z-index: 1000;
+}
+
+.square .content h2 {
+  padding: 0 0 20px 0;
+  text-decoration: underline;
+  font-weight: 900;
 }
 
 .square .content a {
