--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -31,10 +31,6 @@ body {
             transition: 0.5s;
             animation: animate 6s linear infinite;
         }
-        &:hover:nth-child(1) {
-            border: none;
-            background: rgba(0,0,255,0.8) ;
-        }
         &:nth-child(2) {
             position: absolute;
             left: 0;
@@ -46,10 +42,6 @@ body {
             transition: 0.5s;
             animation: animate 4s linear infinite;
         }
-        &:hover:nth-child(2) {
-            border: none;
-            background: rgba(0,0,255,0.8) ;
-        }
         &:nth-child(3) {
             position: absolute;
             left: 0;
@@ -60,10 +52,6 @@ body {
             border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
             transition: 0.5s;
             animation: animate2 10s linear infinite;
-        }
-        &:hover:nth-child(3) {
-            border: none;
-            background: rgba(0,0,255,0.8) ;
         }
         @keyframes animate {
             0% {
@@ -80,7 +68,19 @@ body {
             100% {  
                 transform: rotate(0%);
             }
-        }
+        }  
+    }
+    &:hover span:nth-child(1) {
+        border: none;
+        background: rgba(0,0,255,0.8) ;
+    }
+    &:hover span:nth-child(2) {
+        border: none;
+        background: rgba(0,0,255,0.8) ;
+    }
+    &:hover span:nth-child(3) {
+        border: none;
+        background: rgba(0,0,255,0.8) ;
     }
     .content {
         position: relative;
@@ -89,6 +89,11 @@ body {
         text-align: center;
         transition: 0.5s;
         z-index: 1000;
+        h2 {
+            padding: 0 0 20px 0;
+            text-decoration: underline;
+            font-weight: 900;
+        }
         a {
             position: relative;
             display: inline-block;
