--- a/Animated-Box-Design/style.scss
+++ b/Animated-Box-Design/style.scss
@@ -1,3 +1,5 @@
+$card-bg: rgba(223, 92, 153, 0.8);
+
 *{
     margin: 0;
     padding: 0;
@@ -72,15 +74,15 @@ body {
     }
     &:hover span:nth-child(1) {
         border: none;
-        background: rgba(0,0,255,0.8) ;
+        background:  $card-bg;
     }
     &:hover span:nth-child(2) {
         border: none;
-        background: rgba(0,0,255,0.8) ;
+        background: $card-bg;
     }
     &:hover span:nth-child(3) {
         border: none;
-        background: rgba(0,0,255,0.8) ;
+        background: $card-bg;
     }
     .content {
         position: relative;
