--- a/Card-hover-effect/style.scss
+++ b/Card-hover-effect/style.scss
@@ -1,4 +1,13 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #16384c;
 }
