--- a/Card-hover-effect/style.css
+++ b/Card-hover-effect/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -16,5 +15,28 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background: #16384c;
+}
+
+.container {
+  position: relative;
+  width: 1100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 30px;
+}
+
+.container .card {
+  position: relative;
+  max-width: 300px;
+  height: 420px;
 }
 /*# sourceMappingURL=style.css.map */
