--- a/Card-hover-effect/style.css
+++ b/Card-hover-effect/style.css
@@ -38,5 +38,28 @@ body {
   position: relative;
   max-width: 300px;
   height: 420px;
+  background: white;
+  margin: 30px 10px;
+  padding: 20px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .card .img-box {
+  position: relative;
+  height: 260px;
+  width: 260px;
+}
+
+.container .card .img-box img {
+  max-width: 100%;
+  border-radius: 5px;
 }
 /*# sourceMappingURL=style.css.map */
