--- a/Card-hover-effect/style.scss
+++ b/Card-hover-effect/style.scss
@@ -23,5 +23,20 @@ body {
         position: relative;
         max-width: 300px;
         height: 420px;
+        background: white;
+        margin: 30px 10px;
+        padding: 20px 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .img-box {
+            position: relative;
+            height: 260px;
+            width: 260px;
+            img {
+                max-width: 100%;
+                border-radius: 5px;
+            }
+        }
     }
 }
