--- a/Card-hover-effect/style.css
+++ b/Card-hover-effect/style.css
@@ -37,19 +37,25 @@ body {
 .container .card {
   position: relative;
   max-width: 300px;
-  height: 420px;
+  height: 215px;
   background: white;
   margin: 30px 10px;
   padding: 20px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 0 5px 202px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 5px 202px rgba(0, 0, 0, 0.5);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.container .card:hover {
+  height: 420px;
 }
 
 .container .card .img-box {
