--- a/Card-hover-effect/style.scss
+++ b/Card-hover-effect/style.scss
@@ -22,13 +22,17 @@ body {
     .card {
         position: relative;
         max-width: 300px;
-        height: 420px;
+        height: 215px;
         background: white;
         margin: 30px 10px;
         padding: 20px 15px;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        box-shadow: 0 5px 202px rgba(0,0,0,0.5);
+        transition: 0.3s ease-in-out;
+        &:hover {
+            height: 420px;
+        }
         .img-box {
             position: relative;
             height: 260px;
