--- a/Card-hover-effect/style.scss
+++ b/Card-hover-effect/style.scss
@@ -37,10 +37,17 @@ body {
             position: relative;
             height: 260px;
             width: 260px;
+            left: 20px;
+            top: -60px;
+            z-index: 1;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
             img {
                 max-width: 100%;
                 border-radius: 5px;
             }
+        }
+        .content {
+            position: relative;
         }
     }
 }
