--- a/Card-hover-effect/style.css
+++ b/Card-hover-effect/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -14,7 +14,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #16384c;
+  background-image: -webkit-gradient(linear, left top, right top, from(pink), to(#b61212));
+  background-image: linear-gradient(90deg, pink, #b61212);
 }
 
 .container {
@@ -38,7 +39,8 @@ body {
   position: relative;
   max-width: 300px;
   height: 215px;
-  background: white;
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.7);
   margin: 30px 10px;
   padding: 20px 15px;
   display: -webkit-box;
@@ -55,7 +57,7 @@ body {
 }
 
 .container .card:hover {
-  height: 420px;
+  height: 400px;
 }
 
 .container .card:hover .content {
@@ -92,5 +94,9 @@ body {
   opacity: 0;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
+}
+
+.container .card .content h2 {
+  padding: 0 0 10px 0;
 }
 /*# sourceMappingURL=style.css.map */
