--- a/Card-hover-effect/style.scss
+++ b/Card-hover-effect/style.scss
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #16384c;
+    background-image: linear-gradient(90deg, rgb(255, 192, 203), rgb(182, 18, 18));
 }
 .container {
     position: relative;
@@ -23,7 +23,8 @@ body {
         position: relative;
         max-width: 300px;
         height: 215px;
-        background: white;
+        border-radius: 15px;
+        background: rgba(255, 255, 255, 0.7);
         margin: 30px 10px;
         padding: 20px 15px;
         display: flex;
@@ -31,7 +32,7 @@ body {
         box-shadow: 0 5px 202px rgba(0,0,0,0.5);
         transition: 0.3s ease-in-out;
         &:hover {
-            height: 420px;
+            height: 400px;
             .content {
                 visibility: visible;
                 opacity: 1;
@@ -61,6 +62,9 @@ body {
             visibility: hidden;
             opacity: 0;
             transition: 0.3s ease-in-out;
+            h2 {
+                padding: 0 0 10px 0;
+            }
         }
     }
 }
