--- a/Card-hover-effect/style.scss
+++ b/Card-hover-effect/style.scss
@@ -9,7 +9,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(90deg, rgb(255, 192, 203), rgb(182, 18, 18));
+    // background-image: linear-gradient(90deg, rgb(255, 192, 203), rgb(182, 18, 18));
+    background: rgba(41, 39, 39, 0.89);
 }
 .container {
     position: relative;
