--- a/Mouseover-3D/style.css
+++ b/Mouseover-3D/style.css
@@ -2,4 +2,21 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container {
+  position: relative;
+  top: 100px;
+}
 /*# sourceMappingURL=style.css.map */
