--- a/Mouseover-3D/style.scss
+++ b/Mouseover-3D/style.scss
@@ -2,3 +2,13 @@
     margin: 0;
     padding: 0;
 }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    position: relative;
+    top: 100px;
+}
