--- a/Mouseover-3D/style.css
+++ b/Mouseover-3D/style.css
@@ -1,6 +1,9 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
@@ -13,10 +16,66 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  min-height: 100vh;
 }
 
 .container {
   position: relative;
-  top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 50px 0;
+}
+
+.container .card {
+  position: relative;
+  width: 450px;
+  height: 300px;
+  margin: 60px 0;
+  background: white;
+}
+
+.container .card:hover .content {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.container .card .img-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.container .card .img-box img {
+  max-width: 100%;
+}
+
+.container .card .content {
+  position: absolute;
+  left: 30px;
+  right: 30px;
+  top: 70%;
+  text-align: center;
+  background: red;
+  padding: 20px 5px;
+  -webkit-transform: translateZ(20px) scaleY(0);
+          transform: translateZ(20px) scaleY(0);
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  visibility: hidden;
+  opacity: 0;
 }
 /*# sourceMappingURL=style.css.map */
