--- a/Mouseover-3D/style.scss
+++ b/Mouseover-3D/style.scss
@@ -1,14 +1,59 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
 body {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 
 .container {
     position: relative;
-    top: 100px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-direction: column;
+    padding: 50px 0;
+    .card {
+        position: relative;
+        width: 450px;
+        height: 300px;
+        margin: 60px 0;
+        background: white;
+        &:hover {
+            .content {
+                visibility: visible;
+                opacity: 1;
+                transition: 0.3s ease-in-out;
+            }
+        }
+        .img-box {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            img {
+                max-width: 100%;
+            }
+        }
+        .content {
+            position: absolute;
+            left: 30px;
+            right: 30px;
+            top: 70%;
+            text-align: center;
+            background: red;
+            padding: 20px 5px;
+            transform: translateZ(20px) scaleY(0);
+            transform-origin: top;
+            // transition: 0.5s;
+            visibility: hidden;
+            opacity: 0;
+        }
+    }
 }
