--- a/Mouseover-3D/style.scss
+++ b/Mouseover-3D/style.scss
@@ -18,14 +18,19 @@ body {
     align-self: center;
     flex-direction: column;
     padding: 50px 0;
+    transform-style: preserve-3d;
     .card {
         position: relative;
         width: 450px;
         height: 300px;
         margin: 60px 0;
         background: white;
+        transform-style: preserve-3d;
+
         &:hover {
+            box-shadow: 0 50px 80px rgba(0,0,0,0.7);
             .content {
+                transform: translateZ(20px) scaleY(1);
                 visibility: visible;
                 opacity: 1;
                 transition: 0.3s ease-in-out;
@@ -39,19 +44,23 @@ body {
             height: 100%;
             img {
                 max-width: 100%;
+                max-height: 100%;
             }
         }
         .content {
             position: absolute;
             left: 30px;
             right: 30px;
-            top: 70%;
+            top: 60%;
             text-align: center;
-            background: red;
-            padding: 20px 5px;
+            // background: rgba(224, 154, 197, 0.87);
+            background-color: rgba(73, 53, 53, 0.8);
+            backdrop-filter: blur(20px);
+            color: white ;
+            padding: 20px 10px;
             transform: translateZ(20px) scaleY(0);
             transform-origin: top;
-            // transition: 0.5s;
+            transition: 0.5s;
             visibility: hidden;
             opacity: 0;
         }
