--- a/Mouseover-3D/style.scss
+++ b/Mouseover-3D/style.scss
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background: rgb(221, 219, 219);
 }
 
 .container {
