--- a/Mouseover-3D/style.css
+++ b/Mouseover-3D/style.css
@@ -30,10 +30,10 @@ body {
           justify-content: center;
   -ms-flex-item-align: center;
       align-self: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 50px 0;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
@@ -47,7 +47,6 @@ body {
   background: white;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-  margin: 0 30px;
 }
 
 .container .card:hover {
