--- a/Mouseover-3D/style.css
+++ b/Mouseover-3D/style.css
@@ -30,10 +30,6 @@ body {
           justify-content: center;
   -ms-flex-item-align: center;
       align-self: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   padding: 50px 0;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
@@ -43,10 +39,10 @@ body {
   position: relative;
   width: 450px;
   height: 300px;
-  margin: 60px 0;
   background: white;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
+  margin: 0 30px;
 }
 
 .container .card:hover {
