--- a/Soft-box-shadow/styles.css
+++ b/Soft-box-shadow/styles.css
@@ -57,8 +57,8 @@ body {
           align-items: center;
   text-align: center;
   margin: 15px;
-  -webkit-box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.5), 15px 15px 15px rgba(0, 0, 0, 0.05);
-          box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.5), 15px 15px 15px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.5), 15px 15px 15px rgba(0, 0, 0, 0.05), inset 4px 4px 4px rgba(255, 255, 255, 0.8), inset -4px -4px 4px rgba(0, 0, 0, 0.05), 0px 50px 40px rgba(0, 0, 0, 0.05);
+          box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.5), 15px 15px 15px rgba(0, 0, 0, 0.05), inset 4px 4px 4px rgba(255, 255, 255, 0.8), inset -4px -4px 4px rgba(0, 0, 0, 0.05), 0px 50px 40px rgba(0, 0, 0, 0.05);
 }
 
 .box .image img {
