--- a/Soft-box-shadow/styles.scss
+++ b/Soft-box-shadow/styles.scss
@@ -30,7 +30,10 @@ body {
         text-align: center;
         margin: 15px;
         box-shadow: -15px -15px 15px rgba(255,255,255,0.5),
-                    15px 15px 15px rgba(0,0,0,0.05);
+                    15px 15px 15px rgba(0,0,0,0.05),
+                    inset 4px 4px 4px rgba(255,255,255,0.8),
+                    inset -4px -4px 4px rgba(0,0,0,0.05),
+                    0px 50px 40px rgba(0,0,0,0.05);
         img {
             max-width: 180px;
             max-height: 180px;
