--- a/Comparison-slider/style.css
+++ b/Comparison-slider/style.css
@@ -33,5 +33,6 @@
   background-attachment: fixed;
   background-size: cover;
   left: 47%;
+  cursor: col-resize;
 }
 /*# sourceMappingURL=style.css.map */
