--- a/Login/style.scss
+++ b/Login/style.scss
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
